--- a/scr/styles.css
+++ b/scr/styles.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@media (-webkit-device-pixel-ratio: 1.25) {
+    * {
+      zoom: 0.975;
+    }
+  }
